--- a/.github/workflows/cd-backend.yml
+++ b/.github/workflows/cd-backend.yml
@@ -8,7 +8,7 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v5
             - name: Autenticação no GHCR
-              uses: docker/login-actions@v3
+              uses: docker/login-action@v3
               with:
                 registry: ghcr.io
                 username: ${{ github.repository_owner }}
