--- a/.github/workflows/cd-backend.yml
+++ b/.github/workflows/cd-backend.yml
@@ -11,14 +11,14 @@ jobs:
               uses: docker/login-action@v3
               with:
                 registry: ghcr.io
-                username: ${{ github.repository_owner }}
+                username: vinicios07-dev
                 password: ${{ secrets.GITHUB_TOKEN }}
             - name: Construir e enviar a imagem Docker
               uses: docker/build-push-action@v6
               with:
                 context: sgcmapi/
                 push: true
-                tags: ghcr.io/${{ github.repository_owner }}/sgcmapi:latest
+                tags: ghcr.io/vinicios07-dev/sgcmapi:latest
     deploy:
       needs: build-push
       runs-on: ubuntu-latest
