--- a/.github/workflows/cd-backend.yml
+++ b/.github/workflows/cd-backend.yml
@@ -11,7 +11,7 @@ jobs:
               uses: docker/login-action@v3
               with:
                 registry: ghcr.io
-                username: vinicios07-dev
+                username: ${{ github.repository_owner }}
                 password: ${{ secrets.GITHUB_TOKEN }}
             - name: Construir e enviar a imagem Docker
               uses: docker/build-push-action@v6
